# StepwiseRegression

./: CMakeLists.txt  Dockerfile  README.md
src/: main.cpp  matrix.cpp  matrix.h  regression.cpp  regression.h
